# baadf00d-game

./: CMakeLists.txt  LICENSE
.run/: Run.run.xml
console/: CMakeLists.txt
console/include/: ipc_packet_handler.h
console/src/: main.c
core/: CMakeLists.txt
core/include/: ipc_server_handler.h
core/src/: ipc_server_handler.c  main.c
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/include/engine/: common.h  game_loop.h
engine/launch/: CMakeLists.txt
engine/launch/src/: main.c
engine/shared_include/: game_interface.h
infra/: CMakeLists.txt
infra/include/: ipc.h
infra/include/infra/: compiler_and_platform.h  ipc.h  module.h  process.h  structures.h  thread.h
infra/include/infra/protocols/: ipc_packet.h
infra/src/: ipc.c  ipc_server.c  module.c  process.c  thread.c
infra/src/protocols/: ipc_packet.c
